--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>NextGen Udaan CRM</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="icon" type="image/png" href="crm.png">
     <link href="https://unpkg.com/feather-icons/dist/feather.css" rel="stylesheet">
 </head>
 
