--- a/index.html
+++ b/index.html
@@ -711,6 +711,8 @@
                                 <th>Name</th>
                                 <th>Phone</th>
                                 <th>Email</th>
+                                <th>Instagram</th>
+                                <th>Source</th>
                                 <th>Location</th>
                                 <th>Date</th>
                                 <th>Actions</th>
